# npp-py

./: CMakeLists.txt  README.md  pyproject.toml
src/: npp_wrapper.cpp  npp_wrapper.pyi
tests/: test_resize.py
